<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ThirdFragment">

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/ACHIEVEMENTS"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/head"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ballebaazi"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />


    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="157dp"
            android:layout_height="match_parent"
            android:src="@drawable/prize" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/imageView11"
            android:layout_toRightOf="@+id/imageView11"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imageView11"
            android:layout_toRightOf="@+id/imageView11"
            android:text="@string/balle_baazigar"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/imageView11"
            android:layout_toRightOf="@+id/imageView11"
            android:text="(No. of matches played)"
            android:textColor="@color/yellow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"

        android:layout_width="350dp"

        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="157dp"
            android:layout_height="match_parent"
            android:src="@drawable/prize" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/imageView10"
            android:layout_toRightOf="@+id/imageView10"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="10dp"
            android:text="@string/champion"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/imageView10"
            android:layout_toRightOf="@+id/imageView10"
            android:text="(No. of matches won)"
            android:textColor="@color/yellow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout7">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="157dp"
            android:layout_height="match_parent"
            android:src="@drawable/prize" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="33dp"

            android:layout_marginLeft="33dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/imageView9"
            android:layout_toRightOf="@+id/imageView9"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imageView9"

            android:layout_toRightOf="@+id/imageView9"
            android:text="@string/century_hero"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/imageView9"
            android:layout_toRightOf="@+id/imageView9"
            android:text="(No. of centuries scored)"
            android:textColor="@color/yellow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="157dp"
            android:layout_height="match_parent"
            android:src="@drawable/prize" />

        <ProgressBar
            android:id="@+id/progressBar4"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="33dp"

            android:layout_marginLeft="33dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/imageView8"
            android:layout_toRightOf="@+id/imageView8"
            android:max="1000"
            android:progress="0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imageView8"

            android:layout_toRightOf="@+id/imageView8"
            android:text="@string/sixer_king"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/imageView8"
            android:layout_toRightOf="@+id/imageView8"
            android:text="(No. of sixes scored)"
            android:textColor="@color/yellow" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>